--- a/config.toml
+++ b/config.toml
@@ -66,7 +66,7 @@ url = "posts/"
   name = "Academic talks"
   weight = 4
   url = "talks"
-[[menu.DLresources]]
+[[menu.main]]
   name = "Deep Learning Resources"
   weight = 5
   url = "deepLearningResources"
