--- a/config.toml
+++ b/config.toml
@@ -67,6 +67,6 @@ url = "posts/"
   weight = 4
   url = "talks"
 [[menu.main]]
-  name = "Deep Learning Resources"
+  name = "DL Resources"
   weight = 5
   url = "deepLearningResources"
