--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -29,6 +29,10 @@ defaults:
 services:
   disqus:
     shortname: davidemurari
+# (optional—ensure it’s not disabled)
+privacy:
+  disqus:
+    disable: false
 
 jobs:
   # Build job
