--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,13 @@ defaultcontentlanguage = "en"
 
 paginate = 20
 
-#disqusShortname = "davide"
+services:
+  disqus:
+    shortname: davidemurari
+# (optional—ensure it’s not disabled)
+privacy:
+  disqus:
+    disable: false
 
 [markup.highlight]
 style = "github-dark"
